--- a/src/css/_igem-reset.scss
+++ b/src/css/_igem-reset.scss
@@ -29,12 +29,12 @@
   height: 0px;
 }
 
-ul {
-  list-style-image: none;
-  /* removes the iGEM wiki bullets */
-  padding: 0;
-  margin: 0;
-}
+// ul {
+//   list-style-image: none;
+//   /* removes the iGEM wiki bullets */
+//   padding: 0;
+//   margin: 0;
+// }
 
 #mw-content-text > p {
   /*make <p> containing <head> tags invisible */
